--- a/.gitignore
+++ b/.gitignore
@@ -47,11 +47,13 @@ gradle-app.setting
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+.idea/modules.xml
+.idea/*.iml
+.idea/*.xml
+.idea/.gitignore
+.idea/modules
+*.iml
+*.ipr
 
 # CMake
 cmake-build-*/
