--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,20 @@ repositories {
 
 dependencies {
     implementation name: 'max'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: property('ch.qos.logback')
+    implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: property('org.java-websocket')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: property('org.junit.jupiter')
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: property('org.junit.jupiter')
+}
+
+task customFatJar(type: Jar) {
+    archiveFileName = 'max8-ui12.jar'
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    // exclude max8
+    exclude 'com/cycling74/**'
+    with jar
 }
 
 test {
