--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation name: 'max'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: property('ch.qos.logback')
     implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: property('org.java-websocket')
+
+    // test
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: property('org.junit.jupiter')
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: property('org.junit.jupiter')
 }
