--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-org.junit.jupiter=5.6.2
-ch.qos.logback=1.2.3
-org.java-websocket=1.5.1
+org.junit.jupiter=5.6.+
+ch.qos.logback=1.2.+
+org.java-websocket=1.5.+
