--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: property('org.java-websocket')
 
     // test
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: property('org.mockito')
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: property('org.mockito')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: property('org.junit.jupiter')
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: property('org.junit.jupiter')
 }
