--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: property('org.mockito')
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: property('org.mockito')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: property('org.junit.jupiter')
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: property('org.junit.jupiter')
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: property('org.junit.jupiter')
 }
 
