--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: property('org.mockito')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: property('org.junit.jupiter')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: property('org.junit.jupiter')
+    testImplementation group: 'org.springframework', name: 'spring-test', version: property('org.springframework')
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: property('org.junit.jupiter')
 }
 
